--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -152,9 +152,9 @@
             </div>-->
 
             <div class="video bump-down">
-                <a href="http://www.youtube.com/embed/gHHnIqDISL0?rel=0&amp;wmode=transparent" class="youtube cboxElement"><span class="play-button"></span><img src="{echo CDN}video-main.jpg" alt="Thorn Law Group Introduction Video"></a><a href="http://www.thorntaxlaw.com/videos/" class="caption">See More Videos</a>
+                <a href="http://www.youtube.com/embed/gHHnIqDISL0?rel=0&amp;wmode=transparent" class="youtube cboxElement"><span class="play-button"></span><img src="{echo CDN}video-main.jpg" alt="Thorn Law Group Introduction Video"></a><a href="/videos/" class="caption">See More Videos</a>
                 <br>
-                <a href="http://www.thorntaxlaw.com/practices/offshore-bank-accounts/2014-update-irs-amnesty-program/" class="caption irs-amn">READ MORE ABOUT WHAT THE<br>2014 IRS AMNESTY PROGRAM UPDATE<br>MEANS FOR YOU!</a>
+                <a href="/practices/offshore-bank-accounts/2014-update-irs-amnesty-program/" class="caption irs-amn">READ MORE ABOUT WHAT THE<br>2014 IRS AMNESTY PROGRAM UPDATE<br>MEANS FOR YOU!</a>
             </div>
 
             <a class="ttlhv youtube cboxElement" href="http://www.youtube.com/embed/Ajy2UWLHBn4?rel=0&amp;wmode=transparent&amp;autoplay=1" target="_blank"><img src="{echo CDN}Video-Interview-Home.jpg" alt="Undisclosed Offshore Account Video"></a>
@@ -192,23 +192,23 @@
             <div class="third dark">
                 <h2>Washington, DC Tax &amp; IRS<br><span class="larger">Hot Topics</span></h2>
                 <ul>
-                    <li><a href="http://www.thorntaxlaw.com/practices/offshore-bank-accounts/">Offshore Accounts News</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/offshore-bank-accounts/2014-update-irs-amnesty-program/">2014 Update IRS Amnesty Program</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/business-tax-law/irs-healthcare/">IRS Health Care</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/offshore-bank-accounts/foreign-accounts-tax-compliance-act-fatca/">FATCA</a></li>
+                    <li><a href="/practices/offshore-bank-accounts/">Offshore Accounts News</a></li>
+                    <li><a href="/practices/offshore-bank-accounts/2014-update-irs-amnesty-program/">2014 Update IRS Amnesty Program</a></li>
+                    <li><a href="/practices/business-tax-law/irs-healthcare/">IRS Health Care</a></li>
+                    <li><a href="/practices/offshore-bank-accounts/foreign-accounts-tax-compliance-act-fatca/">FATCA</a></li>
                     <li>Credit Suisse, UBS, HSBC, RBS, Julius Baer, Bank LEUMI, Switzerland, Singapore, Israel, India, China, Russia</li>
                 </ul>
-                <a href="http://www.thorntaxlaw.com/practices/offshore-bank-accounts/" class="view">Learn More</a>
+                <a href="/practices/offshore-bank-accounts/" class="view">Learn More</a>
                 <div class="bottom-angle"></div>
             </div>
             <div class="third last">
                 <h2>Latest DC Tax Lawyer<br><span class="larger">News</span></h2>
                 <ul>
-                    <li><a href="http://www.thorntaxlaw.com/blog/john-doe-summonses-issued-in-tax-evasion-case/">John Doe Summonses Issued in Tax Evasion Case</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/blog/offshore-accounts-face-global-tax-evasion-crackdown/">Offshore Accounts Face Global Tax Evasion Crackdown</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/blog/israel-bank-faces-tax-evasion-prosecution/">Israel Bank Faces Tax Evasion Prosecution </a></li>
+                    <li><a href="/blog/john-doe-summonses-issued-in-tax-evasion-case/">John Doe Summonses Issued in Tax Evasion Case</a></li>
+                    <li><a href="/blog/offshore-accounts-face-global-tax-evasion-crackdown/">Offshore Accounts Face Global Tax Evasion Crackdown</a></li>
+                    <li><a href="/blog/israel-bank-faces-tax-evasion-prosecution/">Israel Bank Faces Tax Evasion Prosecution </a></li>
                 </ul>
-                <a href="http://www.thorntaxlaw.com/contact/" class="view">Get In Touch Now</a>
+                <a href="/contact/" class="view">Get In Touch Now</a>
             </div>
         <br class="clear">    </div>
     </div>
@@ -230,40 +230,40 @@
                             <p itemprop="description">On January 9, 2012, the
                             IRS introduced the reopening of its Offshore Voluntary Disclosure
                             Program for undisclosed offshore accounts.</p>
-                            <a href="http://www.thorntaxlaw.com/practices/" class="view">Visit IRS Voluntary Disclosures</a>
+                            <a href="/practices/" class="view">Visit IRS Voluntary Disclosures</a>
                         </li>
                         <li style="left: 0px;" id="als-item_0_2" itemprop="video" itemscope="" itemtype="http://schema.org/VideoObject" class="als-item"><h2 itemprop="name">FATCA: Foreign Asset Reporting</h2>
                             <a itemprop="embedURL" href="http://www.youtube.com/embed/LOJ3ZRWORnw?rel=0&amp;wmode=transparent" class="youtube cboxElement"><span class="play-button"></span><img itemprop="thumbnailURL" src="{echo CDN}images/layout/video-fatca.jpg" alt="FATCA: Foreign Asset Reporting Video"></a>
                             <p itemprop="description">The tax world as we know
                             it is changing - both nationally and internationally. Disclosure
                             requirements of foreign assets are becoming more difficult.</p>
-                            <a href="http://www.thorntaxlaw.com/practices/" class="view">Visit FATCA: Foreign Asset Reporting</a>
+                            <a href="/practices/" class="view">Visit FATCA: Foreign Asset Reporting</a>
                         </li>
                         <li style="left: 0px;" id="als-item_0_3" itemprop="video" itemscope="" itemtype="http://schema.org/VideoObject" class="als-item"><h2 itemprop="name">Estate Planning/Wealth Management</h2>
                             <a itemprop="embedURL" href="http://www.youtube.com/embed/yan16iVRvdg?rel=0&amp;wmode=transparent" class="youtube cboxElement"><span class="play-button"></span><img itemprop="thumbnailURL" src="{echo CDN}images/layout/video-estate.jpg" alt="Estate Planning/Wealth Management Video"></a>
                             <p itemprop="description">Thorn Law Group and its
                             attorneys have the expertise and knowledge to help with your estate
                             planning and wealth management issues.</p>
-                            <a href="http://www.thorntaxlaw.com/practices/" class="view">Visit Estate Planning/Wealth Management</a>
+                            <a href="/practices/" class="view">Visit Estate Planning/Wealth Management</a>
                         </li>
                         <li style="left: 0px;" id="als-item_0_4" itemprop="video" itemscope="" itemtype="http://schema.org/VideoObject" class="als-item"><h2 itemprop="name">IRS Audits &amp; Appeals</h2>
                             <a itemprop="embedURL" href="http://www.youtube.com/embed/W9ALrESjRTc?rel=0&amp;wmode=transparent" class="youtube cboxElement"><span class="play-button"></span><img itemprop="thumbnailURL" src="{echo CDN}images/layout/video-audits.jpg" alt="IRS Audits &amp; Appeals Video"></a>
                             <p itemprop="description">First, we identify the
                             issue. Second, we come up with a plan to attack the audit. Third, we
                             resolve the client's issue successfully.</p>
-                            <a href="http://www.thorntaxlaw.com/practices/" class="view">Visit IRS Audits &amp; Appeals</a>
+                            <a href="/practices/" class="view">Visit IRS Audits &amp; Appeals</a>
                         </li>
                         <li style="left: 0px;" id="als-item_0_5" itemprop="video" itemscope="" itemtype="http://schema.org/VideoObject" class="als-item"><h2 itemprop="name">Criminal Tax Matters</h2>
                             <a itemprop="embedURL" href="http://www.youtube.com/embed/HuotMNWZcyk?rel=0&amp;wmode=transparent" class="youtube cboxElement"><span class="play-button"></span><img itemprop="thumbnailURL" src="{echo CDN}images/layout/video-criminal.jpg" alt="Criminal Tax Matters Video"></a>
                             <p itemprop="description">The attorneys at Thorn Law Group represent clients in criminal tax investigations across the country and around the globe.</p>
-                            <a href="http://www.thorntaxlaw.com/practices/" class="view">Visit Criminal Tax Matters</a>
+                            <a href="/practices/" class="view">Visit Criminal Tax Matters</a>
                         </li>
                         <li style="left: 0px;" id="als-item_0_6" itemprop="video" itemscope="" itemtype="http://schema.org/VideoObject" class="als-item"><h2 itemprop="name">Business Tax Issues</h2>
                             <a itemprop="embedURL" href="http://www.youtube.com/embed/ps3JMvUvxIg?rel=0&amp;wmode=transparent" class="youtube cboxElement"><span class="play-button"></span><img itemprop="thumbnailURL" src="{echo CDN}images/layout/video-business.jpg" alt="Business Tax Issues Video"></a>
                             <p itemprop="description">Many of our clients come
                             to us with serious tax matters before the IRS including payroll, trust
                             fund recovery, and worker classifications type tax issues.</p>
-                            <a href="http://www.thorntaxlaw.com/practices/" class="view">Visit Business Tax Issues</a>
+                            <a href="/practices/" class="view">Visit Business Tax Issues</a>
                         </li>
                         <li style="left: 0px;" id="als-item_0_7" itemprop="video" itemscope="" itemtype="http://schema.org/VideoObject" class="als-item"><h2 itemprop="name">International Tax Issues</h2>
                             <a itemprop="embedURL" href="http://www.youtube.com/embed/cXUtmH_PJSY?rel=0&amp;wmode=transparent" class="youtube cboxElement"><span class="play-button"></span><img itemprop="thumbnailURL" src="{echo CDN}images/layout/video-international.jpg" alt="International Tax Issues Video"></a>
@@ -271,7 +271,7 @@
                             changing world, individuals are forced to deal with complicated tax laws
                             from different countries, facing additional challenges in terms of tax
                             compliance.</p>
-                            <a href="http://www.thorntaxlaw.com/practices/" class="view">Visit International Tax Issues</a>
+                            <a href="/practices/" class="view">Visit International Tax Issues</a>
                         </li>
                     </ul>
                 </div>
@@ -322,15 +322,15 @@
             <div class="practice-section clearfix">
                 <h3>Our firm's practice areas include:</h3>
                 <ul>
-                    <li><a href="http://www.thorntaxlaw.com/practices/business-tax-law/">Business tax law</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/international-tax/">international tax</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/irs-audits-litigation/">IRS audits and litigation</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/criminal-tax-law/">Criminal tax law</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/irs-audits-litigation/irs-audits-and-appeals/">IRS audits and appeals</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/offshore-bank-accounts/">Offshore bank accounts</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/wealth-estate-planning/">Wealth &amp; Estate planning</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/offshore-bank-accounts/foreign-accounts-tax-compliance-act-fatca/">International Tax/FATCA</a></li>
-                    <li><a href="http://www.thorntaxlaw.com/practices/business-tax-law/irs-healthcare/">IRS Healthcare</a></li>
+                    <li><a href="/practices/business-tax-law/">Business tax law</a></li>
+                    <li><a href="/practices/international-tax/">international tax</a></li>
+                    <li><a href="/practices/irs-audits-litigation/">IRS audits and litigation</a></li>
+                    <li><a href="/practices/criminal-tax-law/">Criminal tax law</a></li>
+                    <li><a href="/practices/irs-audits-litigation/irs-audits-and-appeals/">IRS audits and appeals</a></li>
+                    <li><a href="/practices/offshore-bank-accounts/">Offshore bank accounts</a></li>
+                    <li><a href="/practices/wealth-estate-planning/">Wealth &amp; Estate planning</a></li>
+                    <li><a href="/practices/offshore-bank-accounts/foreign-accounts-tax-compliance-act-fatca/">International Tax/FATCA</a></li>
+                    <li><a href="/practices/business-tax-law/irs-healthcare/">IRS Healthcare</a></li>
                     <li><a href="/practices/irs-audits-litigation/irs-whistleblower-actions/">IRS Whistle Blower Office</a></li>
                     <li><a href="/practices/irs-audits-litigation/office-of-professional-responsibility/representation-of-attorneys-before-irs-office-of-professional-responsibility/">IRS Office Of Pro. Responsibility</a></li>
                 </ul>
@@ -345,14 +345,14 @@
             settle their tax disputes.</p>
             <p>To learn more about our comprehensive tax law services or to discuss
             your tax law needs with an experienced Washington D.C. tax attorney,
-            contact our firm for a consultation at (202) 270-7273 or through our <a href="http://www.thorntaxlaw.com/contact/">online contact form</a>.</p>
+            contact our firm for a consultation at (202) 270-7273 or through our <a href="/contact/">online contact form</a>.</p>
             <p>&nbsp;</p>
         <p>&nbsp;</p></div><div id="slidebox" class="essence-box">
         <img src="{echo CDN}images/layout/thorntaxlaw-logo.png" alt="Thorn Law Group">
         <h2>Get Trusted Help Now</h2>
         <p>Over 30 years of expertise for your complicated tax law issues.</p>
         <div class="buttons">
-            <a class="btn yes" href="http://www.thorntaxlaw.com/contact/">YES <i class="fa fa-check"></i><br>I need confidential help</a>
+            <a class="btn yes" href="/contact/">YES <i class="fa fa-check"></i><br>I need confidential help</a>
             <a class="btn close">NO thanks, <i class="fa fa-times"></i><br>I don't need assistance</a>
 
         </div>
