--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -34,7 +34,8 @@
 <script src="{echo CDN}js/element_main.js" charset="UTF-8" type="text/javascript"></script>
 <script src="{echo CDN}js/jquery_003.js"></script>
 </head>
-<body style="position: relative; min-height: 100%; top: 0px;" class="home">
+
+<body class="home">
 
     {include layouts/navigation/header.html}
     {ayield action}
