--- a/application/views/layouts/navigation/footer.html
+++ b/application/views/layouts/navigation/footer.html
@@ -7,9 +7,9 @@
         </div>
         <div class="offices">
             <ul>
-                <li class="first"><a href="http://www.thorntaxlaw.com/offices/washington-dc/">DC Office</a>
+                <li class="first"><a href="/offices/washington-dc/">DC Office</a>
                     <div class="popup">
-                        <p itemscope="" itemtype="http://schema.org/Attorney"><a itemprop="name" href="http://www.thorntaxlaw.com/offices/washington-dc/">Thorn Law Group<br>DC Office</a><br>
+                        <p itemscope="" itemtype="http://schema.org/Attorney"><a itemprop="name" href="/offices/washington-dc/">Thorn Law Group<br>DC Office</a><br>
                         <span itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
                         <span itemprop="streetAddress">888 16th Street NW
                         <br>Suite 800</span><br>
@@ -18,11 +18,11 @@
                         <span itemprop="postalCode">20006</span><br>
                         </span>
                         Phone: <span itemprop="telephone">(202) 270-7273</span><br>
-                        <a href="http://www.thorntaxlaw.com/offices/washington-dc/" class="view">View office details</a></p>
+                        <a href="/offices/washington-dc/" class="view">View office details</a></p>
                     </div></li>
-                    <li><a href="http://www.thorntaxlaw.com/offices/new-jersey/">NJ Office</a>
+                    <li><a href="/offices/new-jersey/">NJ Office</a>
                         <div class="popup">
-                            <p itemscope="" itemtype="http://schema.org/Attorney"><a itemprop="name" href="http://www.thorntaxlaw.com/offices/new-jersey/">Thorn Law Group<br>NJ Office</a><br>
+                            <p itemscope="" itemtype="http://schema.org/Attorney"><a itemprop="name" href="/offices/new-jersey/">Thorn Law Group<br>NJ Office</a><br>
                             <span itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
                             <span itemprop="streetAddress">301 Route 17 North
                             <br>Suite 800</span><br>
@@ -32,11 +32,11 @@
                             </span>
                             Phone: <span itemprop="telephone">(201) 842-7696</span><br>
                             <!-- Fax: (202) 355-1399<br/> -->
-                            <a href="http://www.thorntaxlaw.com/offices/new-jersey/" class="view">View office details</a></p>
+                            <a href="/offices/new-jersey/" class="view">View office details</a></p>
                         </div></li>
-                        <li class="last"><a href="http://www.thorntaxlaw.com/offices/boston/">Boston Office</a>
+                        <li class="last"><a href="/offices/boston/">Boston Office</a>
                             <div class="popup">
-                                <p itemscope="" itemtype="http://schema.org/Attorney"><a itemprop="name" href="http://www.thorntaxlaw.com/offices/boston/">Thorn Law Group<br>Boston Office</a><br>
+                                <p itemscope="" itemtype="http://schema.org/Attorney"><a itemprop="name" href="/offices/boston/">Thorn Law Group<br>Boston Office</a><br>
                                 <span itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
                                 <span itemprop="streetAddress">TEN Post Office Square
                                 <br>8th Floor</span><br>
@@ -46,7 +46,7 @@
                                 </span>
                                 Phone: <span itemprop="telephone">(617) 692-2989</span><br>
                                 <!-- Fax: (202) 355 - 1399<br/> -->
-                                <a href="http://www.thorntaxlaw.com/offices/boston/" class="view">View office details</a></p>
+                                <a href="/offices/boston/" class="view">View office details</a></p>
                             </div></li>
                         </ul>
                         <br class="clear">
@@ -63,49 +63,49 @@
                     </div>
                     <div class="nav-lists">
                         <div class="list">
-                            <a href="http://www.thorntaxlaw.com/firm-overview/"><h2>Firm Overview</h2></a>
+                            <a href="/firm-overview/"><h2>Firm Overview</h2></a>
                             <ul>
-                                <li><a href="http://www.thorntaxlaw.com/firm-overview/where-we-practice/">Where We Practice</a></li>
-                                <li><a href="http://www.thorntaxlaw.com/firm-overview/testimonials/">Testimonials</a></li>
+                                <li><a href="/firm-overview/where-we-practice/">Where We Practice</a></li>
+                                <li><a href="/firm-overview/testimonials/">Testimonials</a></li>
                             </ul>
                         </div>
                         <div class="list">
-                            <a href="http://www.thorntaxlaw.com/attorneys/"><h2>Professionals</h2></a>
+                            <a href="/attorneys/"><h2>Professionals</h2></a>
                             <ul class="attorney-menu">
-                                <li class="attorney-sub role-managing partner"><a href="http://www.thorntaxlaw.com/attorneys/kevin-e-thorn/">Kevin E. Thorn</a></li>
-                                <li class="attorney-sub role-partner"><a href="http://www.thorntaxlaw.com/attorneys/mary-elizabeth-rinaldi/">Mary Elizabeth Rinaldi</a></li>
-                                <li class="attorney-sub role-manager"><a href="http://www.thorntaxlaw.com/attorneys/tarah-kane/">Tarah Kane</a></li>
-                                <li class="attorney-sub role-other"><a href="http://www.thorntaxlaw.com/attorneys/kumar-shivam/">Kumar Shivam</a></li>
-                                <li class="attorney-sub role-other"><a href="http://www.thorntaxlaw.com/attorneys/xin-nie/">Xin Nie</a></li>
-                                <li class="attorney-sub role-other"><a href="http://www.thorntaxlaw.com/attorneys/aurelia-allouche/">Aurelia Allouche</a></li>
+                                <li class="attorney-sub role-managing partner"><a href="/attorneys/kevin-e-thorn/">Kevin E. Thorn</a></li>
+                                <li class="attorney-sub role-partner"><a href="/attorneys/mary-elizabeth-rinaldi/">Mary Elizabeth Rinaldi</a></li>
+                                <li class="attorney-sub role-manager"><a href="/attorneys/tarah-kane/">Tarah Kane</a></li>
+                                <li class="attorney-sub role-other"><a href="/attorneys/kumar-shivam/">Kumar Shivam</a></li>
+                                <li class="attorney-sub role-other"><a href="/attorneys/xin-nie/">Xin Nie</a></li>
+                                <li class="attorney-sub role-other"><a href="/attorneys/aurelia-allouche/">Aurelia Allouche</a></li>
                             </ul>
                         </div>
                         <div class="list wider">
-                            <a href="http://www.thorntaxlaw.com/practices/"><h2>Practice Areas</h2></a>
+                            <a href="/practices/"><h2>Practice Areas</h2></a>
                             <ul class="practice-menu">
-                                <li class="first"><a href="http://www.thorntaxlaw.com/practices/business-tax-law/">Business Tax Law</a>     </li>
-                                <li><a href="http://www.thorntaxlaw.com/practices/criminal-tax-law/">Criminal Tax Law</a>     </li>
-                                <li><a href="http://www.thorntaxlaw.com/practices/offshore-bank-accounts/">Offshore Bank Accounts</a>     </li>
-                                <li><a href="http://www.thorntaxlaw.com/practices/international-tax/">International Tax</a>     </li>
-                                <li><a href="http://www.thorntaxlaw.com/practices/irs-audits-litigation/">IRS Audits &amp; Litigation</a>     </li>
-                                <li><a href="http://www.thorntaxlaw.com/practices/trusts/">Trusts</a>     </li>
-                                <li class="last"><a href="http://www.thorntaxlaw.com/practices/wealth-estate-planning/">Wealth &amp; Estate Planning</a>      </li>
+                                <li class="first"><a href="/practices/business-tax-law/">Business Tax Law</a>     </li>
+                                <li><a href="/practices/criminal-tax-law/">Criminal Tax Law</a>     </li>
+                                <li><a href="/practices/offshore-bank-accounts/">Offshore Bank Accounts</a>     </li>
+                                <li><a href="/practices/international-tax/">International Tax</a>     </li>
+                                <li><a href="/practices/irs-audits-litigation/">IRS Audits &amp; Litigation</a>     </li>
+                                <li><a href="/practices/trusts/">Trusts</a>     </li>
+                                <li class="last"><a href="/practices/wealth-estate-planning/">Wealth &amp; Estate Planning</a>      </li>
                             </ul>
                             <br class="clear">
                         </div>
                         <div class="list">
-                            <a href="http://www.thorntaxlaw.com/blog/"><h2>News &amp; Events</h2></a>
+                            <a href="/blog/"><h2>News &amp; Events</h2></a>
                             <ul>
-                                <li><a href="http://www.thorntaxlaw.com/blog/">Articles/News</a></li>
-                                <li><a href="http://www.thorntaxlaw.com/videos/">Video Library</a></li>
-                                <li><a href="http://www.thorntaxlaw.com/blog/category/press-releases/">Press Releases</a></li>
-                                <li><a href="http://www.thorntaxlaw.com/blog/">Blog</a></li>
+                                <li><a href="/blog/">Articles/News</a></li>
+                                <li><a href="/videos/">Video Library</a></li>
+                                <li><a href="/blog/category/press-releases/">Press Releases</a></li>
+                                <li><a href="/blog/">Blog</a></li>
                             </ul>
                         </div>
                         <div class="list last">
-                            <a href="http://www.thorntaxlaw.com/contact/"><h2>Contact Us</h2></a>
+                            <a href="/contact/"><h2>Contact Us</h2></a>
                             <p>Confidentially speak to our experienced tax attorneys: 202-349-4033</p>
-                            <p><a href="http://www.thorntaxlaw.com/contact/">View our locations, hours or send us a message</a></p>
+                            <p><a href="/contact/">View our locations, hours or send us a message</a></p>
                         </div>
                         <br class="clear">
                     </div>
@@ -116,8 +116,9 @@
                         offshore accounts, amnesty programs, in Washington DC, Baltimore,
                         Maryland, Virginia, New Jersey, Florida and throughout the United
                         States.</p>
-                        <p>Thorn Law Group © Copyright 2009 - 2015. All Rights Reserved. <a href="http://www.thorntaxlaw.com/sitemap/">Sitemap</a> | <a href="http://www.thorntaxlaw.com/disclaimer/">Disclaimer</a> | <a href="http://www.thorntaxlaw.com/legal/">Legal</a> by Thorn Law Group<br>
-                        <a href="http://www.paperstreet.com/" target="_blank">A PaperStreet Web Design</a></p>
+                        <p>Thorn Law Group © Copyright 2009 - 2015. All Rights Reserved. <a href="/sitemap/">Sitemap</a> | <a href="/disclaimer/">Disclaimer</a> | <a href="/legal/">Legal</a> by Thorn Law Group<br>
+                         
+                        <a href="https://www.cloudstuffs.com/" target="_blank">Developed and Managed By Cloudstuffs</a></p>
                     </div>
                 </div>
             </footer>
@@ -131,69 +132,10 @@
             <script src="{echo CDN}js/jquery.js" type="text/javascript"></script>
             <script src="{echo CDN}js/custom.js" type="text/javascript"></script> <!-- Custom scripts -->
             <script src="{echo CDN}js/mscrollbar.js" type="text/javascript"></script><!--Contact Scrollbar-->
-            <script type="text/javascript" src="{echo CDN}js/conversion.js">
-            </script><iframe name="google_conversion_frame" title="Google conversion frame" src="{echo CDN}/a.html" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" width="300" frameborder="0" height="13">&lt;img
-            height="1" width="1" border="0" alt=""
-            src="https://googleads.g.doubleclick.net/pagead/viewthroughconversion/1034416016/?frame=0&amp;random=1442054919505&amp;cv=8&amp;fst=1442054919505&amp;num=1&amp;fmt=1&amp;guid=ON&amp;u_h=768&amp;u_w=1366&amp;u_ah=744&amp;u_aw=1301&amp;u_cd=24&amp;u_his=1&amp;u_tz=330&amp;u_java=false&amp;u_nplug=6&amp;u_nmime=46&amp;frm=0&amp;url=http%3A//www.thorntaxlaw.com/"
-            /&gt;</iframe>
+            <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+            </script>
             <noscript>
             <div style="display:inline;">
                 <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1034416016/?value=0&amp;guid=ON&amp;script=0"/>
             </div>
             </noscript>
-            <div style="display: none;" id="cboxOverlay">
-
-            </div>
-            <div id="goog-gt-tt" class="skiptranslate" dir="ltr">
-                <div style="padding: 8px;"><div>
-                    <div class="logo">
-                        <img src="{echo CDN}/translate_24dp.png" width="20" height="20">
-                    </div>
-                </div>
-            </div>
-            <div class="top" style="padding: 8px; float: left; width: 100%;">
-                <h1 class="title gray">Original text</h1>
-            </div>
-            <div class="middle" style="padding: 8px;">
-                <div class="original-text"></div>
-            </div>
-            <div class="bottom" style="padding: 8px;">
-                <div class="activity-links">
-                    <span class="activity-link">Contribute a better translation</span>
-                    <span class="activity-link"></span>
-                </div>
-                <div class="started-activity-container">
-                    <hr style="color: #CCC; background-color: #CCC; height: 1px; border: none;">
-                    <div class="activity-root"></div>
-                </div>
-            </div>
-            <div style="display: none;" class="status-message"></div>
-        </div>
-        <div style="display: none;" tabindex="-1" role="dialog" class="" id="colorbox">
-            <div id="cboxWrapper"><div>
-                <div style="float: left;" id="cboxTopLeft"></div>
-                <div style="float: left;" id="cboxTopCenter"></div>
-                <div style="float: left;" id="cboxTopRight"></div>
-            </div>
-            <div style="clear: left;">
-                <div style="float: left;" id="cboxMiddleLeft"></div>
-                <div style="float: left;" id="cboxContent">
-                    <div style="float: left;" id="cboxTitle"></div>
-                    <div style="float: left;" id="cboxCurrent"></div>
-                    <button id="cboxPrevious" type="button"></button>
-                    <button id="cboxNext" type="button"></button>
-                    <button id="cboxSlideshow"></button>
-                    <div style="float: left;" id="cboxLoadingOverlay"></div>
-                    <div style="float: left;" id="cboxLoadingGraphic"></div>
-                </div>
-                <div style="float: left;" id="cboxMiddleRight"></div>
-            </div>
-            <div style="clear: left;">
-                <div style="float: left;" id="cboxBottomLeft"></div>
-                <div style="float: left;" id="cboxBottomCenter"></div>
-                <div style="float: left;" id="cboxBottomRight"></div>
-            </div>
-        </div>
-        <div style="position: absolute; width: 9999px; visibility: hidden; display: none; max-width: none;"></div>
-    </div>
-    <iframe style="visibility: visible; box-sizing: content-box; width: 196px; height: 274px; display: none;" class="goog-te-menu-frame skiptranslate" frameborder="0"></iframe>
