--- a/application/views/layouts/navigation/header.html
+++ b/application/views/layouts/navigation/header.html
@@ -1,28 +1,29 @@
+
 <div class="contactPop" style="display:none !important;">
-    <div class="formPop">
-        <div style="height: 0px;" class="sticky-wrapper social"><div class="stuck" id="social-wrap">
-            <div class="text">Contact Now</div>
-        </div></div>
-        <div class="form-scroll mCustomScrollbar _mCS_1 mCS_no_scrollbar"><div tabindex="0" id="mCSB_1" class="mCustomScrollBox mCS-light mCSB_vertical mCSB_inside"><div id="mCSB_1_container" class="mCSB_container mCS_y_hidden mCS_no_scrollbar_y" style="position:relative; top:0; left:0;" dir="ltr">
-            <i class="fa fa-times-circle close"></i>
-            <h2>Get your CONFIDENTIAL consultation</h2>
-            <p>Our experienced tax law team can help.</p>
-            <form onsubmit="return checkData(this)" method="post" action="" id="contactForm" name="contactForm">
-                <p class="contlab"><i class="fa fa-user"></i> Name</p>
-                <input name="name" id="name" placeholder="" class="name placeholder" type="text"><br>
-                <p class="contlab"><i class="fa fa-envelope"></i> Email</p>
-                <input name="email" id="email" placeholder="" class="email placeholder" type="text"><br>
-                <p class="contlab"><i class="fa fa-phone"></i> Phone</p>
-                <input name="phone" id="phone" placeholder="" class="phone placeholder" type="text">
-                <p class="contlab"><i class="fa fa-pencil"></i> Comments/Questions</p>
-                <textarea name="comments"></textarea>
-                <br class="clear">
-                <button type="submit" value="" class="submit">Yes, I want a Confidential Consultation</button>
-                <br class="clear">
-            </form>
-            </div><div style="display: none;" id="mCSB_1_scrollbar_vertical" class="mCSB_scrollTools mCSB_1_scrollbar mCS-light mCSB_scrollTools_vertical"><div class="mCSB_draggerContainer"><div id="mCSB_1_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 30px; top: 0px;" oncontextmenu="return false;"><div style="line-height: 30px;" class="mCSB_dragger_bar"></div></div><div class="mCSB_draggerRail"></div></div></div></div></div>
-        </div>
+  <div class="formPop">
+    <div id="social-wrap">
+      <div class="text">Contact Now</div>
     </div>
+    <div class="form-scroll">
+      <i class="fa fa-times-circle close"></i>
+      <h2>Get your CONFIDENTIAL consultation</h2>
+      <p>Our experienced tax law team can help.</p>
+      <form onsubmit="return checkData(this)" method="post" action="#" id="contactForm" name="contactForm">
+        <p class="contlab"><i class="fa fa-user"></i> Name</p>
+        <input name="name" id="name" type="text" placeholder="" class="name"><br />
+        <p class="contlab"><i class="fa fa-envelope"></i> Email</p>
+        <input name="email" id="email" type="text" placeholder="" class="email"><br />
+        <p class="contlab"><i class="fa fa-phone"></i> Phone</p>
+        <input name="phone" id="phone" type="text" placeholder="" class="phone">
+        <p class="contlab"><i class="fa fa-pencil"></i> Comments/Questions</p>
+        <textarea name="comments"></textarea>
+        <br class="clear" />
+        <button type="submit" value="" class="submit">Yes, I want a Confidential Consultation</button>
+        <br class="clear" />
+      </form>
+    </div>
+  </div>
+</div>
     <header class="header">
         <div class="top-area">
             <div class="container group">
@@ -37,10 +38,11 @@
                             <li><a href="http://www.youtube.com/user/" target="_blank"><i class="fa fa-youtube"></i></a></li>
                             <li class="translator"><a href="#" class="translator-button"><i class="fa fa-language"></i></a>
                                 <div id="translator">
-                                    <div id="google_translate_element"><div style="" dir="ltr" class="skiptranslate goog-te-gadget"><div class="goog-te-gadget-simple" style="white-space: nowrap;" id=":0.targetLanguage"><img style="background-image: url(&quot;https://translate.googleapis.com/translate_static/img/te_ctrl3.gif&quot;); background-position: -65px 0px;" class="goog-te-gadget-icon" src="Lf_files/cleardot.gif"><span style="vertical-align: middle;"><a href="javascript:void(0)" class="goog-te-menu-value"><span>Select Language</span><img src="Lf_files/cleardot.gif" width="1" height="1"><span style="border-left: 1px solid rgb(187, 187, 187);">​</span><img src="Lf_files/cleardot.gif" width="1" height="1"><span style="color: rgb(155, 155, 155);">▼</span></a></span></div></div></div>
+                                  <div id="google_translate_element"></div>
                                     <script type="text/javascript" src="{echo CDN}js/custom_style.js"></script>
                                     <script type="text/javascript" src="{echo CDN}js/element.js"></script>
-                                </div></li>
+                                </div>
+                                </li>
                             </ul>
                             <br class="clear">
                         </div>
@@ -126,7 +128,7 @@
                     <br class="clear">
                 </div>
             </div>
-        </header>
+    </header>
         <nav class="navigation">
             <div class="container">
                 <ul>
@@ -156,21 +158,6 @@
                 <li class="last"><a href="/contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="sticky-wrapper"><nav id="mobile-menu"><div class="slicknav_menu"><a href="#" aria-haspopup="true" tabindex="0" class="slicknav_btn slicknav_collapsed"><span class="slicknav_menutxt">Menu</span><span class="slicknav_icon"><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span><span class="slicknav_icon-bar"></span></span></a><nav role="menu" aria-hidden="true" style="display: none;" class="slicknav_nav slicknav_hidden">
-            <ul>
-                <li class="first"><a role="menuitem" href="/home">Home</a></li>
-                <li><a role="menuitem" href="/firm-overview">Firm Overview</a></li>
-                <li><a role="menuitem" href="/attorneys">Professionals</a></li>
-                <li><a role="menuitem" href="/practices-areas">Practice Areas</a></li>
-                <li><a role="menuitem" href="/practices/business-tax-law">Business Tax Law</a></li>
-                <li><a role="menuitem" href="/practices/criminal-tax-law">Criminal Tax Law</a></li>
-                <li><a role="menuitem" href="/practices/international-tax">International Tax</a></li>
-                <li><a role="menuitem" href="/practices/irs-audits-litigation">IRS Audits &amp; Litigation</a></li>
-                <li><a role="menuitem" href="/practices/offshore-bank-accounts">Offshore Bank Accounts</a></li>
-                <li><a role="menuitem" href="/practices/wealth-estate-planning">Wealth &amp; Estate Planning</a></li>
-                <li><a role="menuitem" href="/blog/">News &amp; Events</a></li>
-                <li class="last"><a role="menuitem" href="/contact">Contact</a></li>
-            </ul>
-        </nav></div>
-        <div class="mobile-phone"><a href="tel:+12023494033"><i class="fa fa-phone"></i></a></div>
-    </nav></div>
+      <nav id="mobile-menu">
+  <div class="mobile-phone"><a href="tel:+919990166950"><i class="fa fa-phone"></i></a></div>
+</nav>
